feat: chatbot included

--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,12 @@ LLM_SUMMARY_ENDPOINT=/v1/chat/completions
 LLM_SUMMARY_MODEL=gpt-3.5-turbo
 LLM_SUMMARY_MAX_TOKENS=120
 LLM_SUMMARY_TIMEOUT=15
+LLM_CHAT_BASE=
+LLM_CHAT_KEY=
+LLM_CHAT_ENDPOINT=/v1/chat/completions
+LLM_CHAT_MODEL=gpt-4o-mini
+LLM_CHAT_MAX_TOKENS=600
+LLM_CHAT_TIMEOUT=20
 LLM_EMBEDDING_BASE=
 LLM_EMBEDDING_KEY=
 LLM_EMBEDDING_ENDPOINT=/v1/embeddings
